# esp-bsp-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  prelude.rs  shared.rs
src/boards/: common.rs  custom_board.rs  esp32_c3_devkit_rust.rs  esp32_c3_lcdkit.rs  esp32_c6_devkitc_1.rs  esp32_s2_kaluga.rs  esp32_s3_box.rs  esp32_s3_box_3.rs  esp32c6devkitc1.rs  esp32s3box.rs  esp32s3box3.rs  m5stack_cores3.rs  m5stackcores3.rs  mod.rs  waveshare_esp32_c6_lcd_1_47.rs
