[package]
name    = "esp-bsp"
version = "0.4.0"
authors = [
    "Juraj Michálek <juraj.michalek@espressif.com>"
]
edition     = "2021"
description = "Rust Bare Metal Board Support Packages for ESP32 related boards with focus on Embassy Async"
repository  = "https://github.com/georgik/esp-bsp-rs"
license     = "MIT OR Apache-2.0"

[dependencies]

[features]
esp32-s3-box = []
esp32-s3-box-3 = []
m5stack-cores3 = []
esp32-c6-devkitc-1 = []
waveshare-esp32-c6-lcd-1-47 = []

# Custom boards are in concept stage and does not work
custom-board = []
